# fastapi-sqlalchemy

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 34828021ab8c_add_document_attribute_to_users_table.py  bee14737857f_create_users_table.py
src/: database.py  main.py
src/controllers/auth/: __init__.py  profile.py  sign_in.py  sign_up.py
src/models/: user.py
src/schemas/: auth.py  http.py  user.py
src/utils/: auth.py  error_handler.py
